# matrix-e2e-rust

./: Cargo.toml  README.md
src/: device.rs  error.rs  http.rs  lib.rs  payload.rs  response.rs
src/crypto/: device_key.rs  megolm_sha2.rs  mod.rs  olm_sha256.rs  one_time_key.rs
tests/: integration_test.rs
