[package]
name = "e2e_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vodozemac = "0.3.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde_json = { version = "1.0.57", features = ["preserve_order"] }